# geo

./: .gitignore  CMakeLists.txt
Assets/: CMakeLists.txt
Assets/Shaders/GL/: Color.frag
CMake/Toolchains/: x86_64-w64-mingw32-gcc.cmake
Conan/: Win32Requirements.txt  conanfile-unix.txt
Documentation/API/: CMakeLists.txt  Doxyfile.in
Source/: CMakeLists.txt
Source/Client/: Display.h  Main.cpp  Main.h  Playground.cpp  Playground.h
Source/Client/Sdl/: Display.cpp  Display.h  Main.cpp  Main.h
Source/Core/: Array.h  Ascii.h  Concepts.h  Finally.h  Format.h  FormatTests.cpp  GameDefs.h.in  Parse.h  ParseTests.cpp  StaticString.h  Str.h  StringTypes.h  TypeTests.cpp  Types.h
Source/Graphics/: Color.h  Rgb.h
Source/IO/: Error.cpp  Error.h  Stream.cpp  Stream.h
Source/IO/ArchiveCodecs/: Zip.cpp  Zip.h
Source/Math/: Math.h  Matrix.h  Rect.h  Vector.h
Source/Render/: Buffer.h  Geometry.h  System.h  Types.h
Source/Render/GL/: Buffer.cpp  Buffer.h  Geometry.cpp  Geometry.h  Gl.cpp  Gl.h  Shaders.cpp  Shaders.h  System.cpp  System.h  Types.h
Source/System/: Debug.cpp  Debug.h  Encoding.h  Error.cpp  Error.h  System.cpp  System.h
Source/System/Unix/: Debug.cpp  System.cpp
Source/System/Windows/: Debug.cpp  Encoding.cpp  System.cpp  Win32.cpp  Win32.h
Source/Utility/: CommandLine.cpp  CommandLine.h
Tools/: MakeZip.py
assets/: CMakeLists.txt
assets/shaders/: color_2d.t
assets/shaders/gl/: color.vert
assets/shaders/glsl150/: color.frag  color.vert
cmake/Modules/: FindSDL2.cmake  Findlibzip.cmake
cmake/toolchains/: x86_64-w64-mingw32-gcc.cmake
conan/: unix-requirements.txt  windows-requirements.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.h  display.cpp  display.h  main.cpp  main.h  playground.cpp  playground.h
src/client/platform/desktop_sdl/: client.cpp  display.cpp
src/core/: CMakeLists.txt  concepts.h  finally.h  format.cpp  game_defs.h.in  parse.cpp  str.h  strings.h  types.cpp  types.h
src/core/include/geo/core/: ascii.h  compiler_defs.h  concepts.h  finally.h  format.h  game_defs.h  num_utils.h  parse.h  static_string.h  string_types.h  string_utils.h  types.h
src/graphics/: CMakeLists.txt  rgb.h
src/graphics/include/geo/graphics/: color.h
src/io/: error.cpp  error.h  stream.cpp  stream.h  zip.cpp  zip.h
src/math/: CMakeLists.txt  math.h  matrix.h  rect.h  vector.h
src/math/include/geo/math/: vector.h
src/render/: CMakeLists.txt  buffer.h  geometry.h  render.h  types.h
src/render/gl/: buffer.cpp  buffer.h  geometry.cpp  geometry.h  gl.cpp  gl.h  render.cpp  render.h  render_system.cpp  shaders.cpp  shaders.h  system.cpp  types.h  utils.cpp  utils.h  version.h.in
src/render/include/geo/render/: system.h
src/render/include/geo/render/gl/: loader.h
src/system/: CMakeLists.txt  cmdline.cpp  cmdline.h  debug.cpp  debug.h  encoding.h  error.cpp  error.h  system.cpp  system.h  system_no_gui.cpp
src/system/include/geo/system/: debug.h  system.h
src/system/platform/unix/: debug.cpp  system.cpp
src/system/unix/: debug.cpp  system.cpp
src/system/windows/: debug.cpp  encoding.cpp  system.cpp  win32.cpp  win32.h
tools/: mkzip.py  requirements.txt
