# Copyright (c) 2024 Martin Mills <daggerbot@gmail.com>
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

set(LOG_PATH_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory("core")
add_subdirectory("math")
add_subdirectory("system")
add_subdirectory("graphics")
add_subdirectory("render")
add_subdirectory("client")
